Fix double border issue

--- a/src/styles/Cart.css
+++ b/src/styles/Cart.css
@@ -17,18 +17,23 @@
 
 table {
   table-layout: fixed;
-  border-collapse: collapse;
-  border: solid;
   flex: 2 2 auto;
 }
 
-.description {
+table,
+th,
+td {
+  border: 1.5px solid black;
+  border-collapse: collapse;
+}
+
+.flex {
   min-width: 15rem;
   flex-grow: 1;
   display: flex;
-  border: none;
-  padding: 1rem;
-  justify-content: space-around;
+  padding: 1rem 3rem;
+  justify-content: start;
+  gap: 10%;
   align-items: center;
 }
 
@@ -36,7 +41,12 @@ img {
   height: 9rem;
   width: 6rem;
   box-sizing: border-box;
-  border: solid;
+  border: solid 1px;
+}
+
+.description div {
+  text-align: center;
+  flex: 1;
 }
 
 .quantity {
@@ -48,13 +58,19 @@ img {
   min-width: 5rem;
 }
 
-table th,
-table td {
-  border: solid;
-}
-
-.cart-data {
+.order-summary {
+  padding: 2rem;
   width: 20%;
   min-width: 15rem;
   flex-shrink: 1;
+}
+
+dt {
+  font-weight: 700;
+  float: left;
+  clear: right;
+}
+
+dd {
+  float: right;
 }
