--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -28,7 +28,7 @@ q {
 p {
   color: white;
   margin: 0.5rem;
-  margin-right: 2rem;
+  margin-right: 1rem;
   font-size: 1.2rem;
   text-align: right;
 }
